2008-03-31  Callum McKenzie  <callum@spooky-possum.org>

	* invest/applet.py
	* invset/widgets.py: Significant UI changes from Matteo
	Zandi. Clicking on the icon produces a dock window like the clock
	applet. The confusing (and not-always-working) colour-patch to
	indicate whether the stocks have gone up or down has been
	removed. Better column alignment and a monospace font. Column
	headers.

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* invest/applet.py: Patch from emil@nishra.com to make the
	right-click menu work for the entire applet. (Bug #522274.)

	* invest/invest-applet.py (_check): Remove glade functions that
	slipped through the patch.

	* invest/__init__.py
	* invest/invest-chart
	* invest/quotes.py
	* invest/chart.py
	* invest/preferences.py
	* invest/defs.py.in
	* invest/widgets.py
	* data/financialchart.ui
	* data/prefs-dialog.ui
	* data/Makefile.am: Convert from glade to gtk-builder. Patch from
	Jaap Haitsma (bug #521082).

2007-10-14  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.populate): 
	* invest/preferences.py (PrefsDialog.__init__): Sort the stocks
	list so we aren't stuck with the random list given by python's
	dict iterator. As per Matt Chisholm's patch in bug #460080. Also
	removed some commented-out old versions of some code (svn is for
	storing that sort of thing).

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.populate): Avoid a division by
	zero when nothing was paid for stocks. (Bug #459116)

	* invest/about.py (show_about): Removed a dead URL from the about
	dialog. Matt Chisholm/Andrew Burton (Bug #460087).

	* invest/applet.py (ProgramWindow.__init__): Make the pop-up
	window non-resizeable at the suggestion of Matt Chisholm (Bug
	#461345). This means that the window auto-sizes and takes into
	account space left by stocks removed from the drop-down list.

2007-07-30  Claude Paroz <claude@2xlibre.net>
