@@ -1,5 +1,7 @@
 2008-03-31  Callum McKenzie  <callum@spooky-possum.org>
 
+	* invest/widgets.py: i18n fixes.
+
 	* invest/applet.py
 	* invset/widgets.py: Significant UI changes from Matteo
 	Zandi. Clicking on the icon produces a dock window like the clock
